# simple-server

./: Cargo.toml  README.md
example/: Cargo.toml  api.rs
router/: Cargo.toml
router-macros/: Cargo.toml
router-macros/src/: lib.rs
router/src/: lib.rs
server/: Cargo.toml
server/src/: server.rs
types/: Cargo.toml
types/src/: lib.rs
