[package]
name = "router-macros"
version = "0.1.0"
authors = ["s-horii"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.62", features = ["full", "fold"] }
quote = "1.0.9"
router = { version = "0.1.0", path = "../router" }